# easy_manipulation_deployment

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  coverage.sh  tesseract.repos
assets/environment/realsense2_description/: CMakeLists.txt  package.xml
assets/environment/table_description/: CMakeLists.txt  package.xml  table.yaml
easy_manipulation_deployment/emd_demo_nodes/run_grasp_execution/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_demo_nodes/run_grasp_planner/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_dynamic_safety/: CMakeLists.txt  controller_plugins.xml  package.xml
easy_manipulation_deployment/emd_dynamic_safety/config/: mappings.yaml
easy_manipulation_deployment/emd_dynamic_safety/src/: collision_checker.cpp  dynamic_safety.cpp  dynamic_safety_trajectory_controller.cpp  interpolate.cpp  next_point_publisher.cpp  replanner.cpp  safety_zone.cpp  visualizer.cpp
easy_manipulation_deployment/emd_dynamic_safety/test/: CMakeLists.txt  panda.srdf  test_collision_checking.cpp  test_hardware.cpp  test_hardware.hpp  test_replanner.cpp  test_replanner.hpp  test_replanner_moveit.cpp  test_replanner_tesseract.cpp
easy_manipulation_deployment/emd_grasp_execution/: CMakeLists.txt  grasp_execution_default_plugins.xml  moveit_cpp_default_executor_plugin.xml  package.xml
easy_manipulation_deployment/emd_grasp_execution/src/: grasp_execution.cpp
easy_manipulation_deployment/emd_grasp_planner/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_grasp_planner/src/: grasp_object.cpp  grasp_scene.cpp
easy_manipulation_deployment/emd_grasp_planner/test/: fcl_functions_test.cpp  grasp_object_test.cpp  grasp_object_test.hpp  math_functions_test.cpp  multifinger_test.cpp  multifinger_test.hpp  pcl_functions_test.cpp  pcl_functions_test.hpp  suction_gripper_test.cpp  suction_gripper_test.hpp
easy_manipulation_deployment/emd_waypoint_execution/: CMakeLists.txt  package.xml
easy_manipulation_deployment/emd_waypoint_execution/src/: waypoint_parser.cpp
easy_manipulation_deployment/grasp_planner/: CMakeLists.txt  LICENSE  README.md  package.xml
easy_manipulation_deployment/grasp_planner/config/: params.yaml  params_2f.yaml  params_3f.yaml  params_airpick4.yaml  params_suction.yaml
easy_manipulation_deployment/grasp_planner/example/: CMakeLists.txt
easy_manipulation_deployment/grasp_planner/include/: conversions.h  end_effector.h  end_effector.hpp  fcl_functions.h  fcl_functions.hpp  finger_gripper.cpp  finger_gripper.h  finger_gripper.hpp  grasp_object.cpp  grasp_object.h  grasp_object.hpp  grasp_scene.cpp  grasp_scene.h  grasp_scene.hpp  pcl_functions.h  suction_gripper.cpp  suction_gripper.h  suction_gripper.hpp
easy_manipulation_deployment/grasp_planner/launch/: grasp_planner_2f_launch.py
easy_manipulation_deployment/grasp_planner/msg/: GraspMethod.msg  GraspPose.msg  GraspTarget.msg  GraspTask.msg
easy_manipulation_deployment/grasp_planner/src/: finger_gripper.cpp  grasp_object.cpp  grasp_scene.cpp  pcl_test (copy).cpp  pcl_test.cpp  pcl_test_raw.cpp  suction_gripper.cpp
easy_manipulation_deployment/grasp_planner/test/: fcl_functions_test.cpp  grasp_object_test.cpp  grasp_object_test.hpp  grasp_scene_test.cpp  grasp_scene_test.hpp  init_tests.cpp  math_functions_test.cpp  multifinger_test.cpp  multifinger_test.hpp  pcl_functions_test.cpp  pcl_functions_test.hpp  suction_gripper_test.cpp  suction_gripper_test.hpp
emd_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
emd_msgs/msg/: GraspMethod.msg  GraspTarget.msg  GraspTask.msg  Option.msg  OptionArray.msg
emd_msgs/srv/: GraspRequest.srv  SubmitGraspTask.srv
grasp_execution/: CMakeLists.txt  package.xml
grasp_execution/config/: fake_controllers.yaml  grasp_execution.yaml  start_positions.yaml
grasp_execution/example/: CMakeLists.txt
grasp_execution/example/config/: fake_grasp_pose_publisher.yaml
grasp_execution/example/src/: demo_node.cpp
grasp_execution/include/grasp_execution/: grasp_execution.hpp  moveit_cpp_if.hpp  scheduler.hpp  utils.hpp
grasp_execution/launch/: grasp_execution.launch.py
grasp_execution/src/: default_planning_action.cpp  fake_grasp_pose_publisher.cpp  grasp_execution.cpp  grasp_execution_node.cpp  moveit_cpp_if.cpp  scheduler.cpp
grasp_execution/src/core/: scheduler.cpp
grasp_execution/src/dynamic_safety/: dynamic_safety.cpp  next_point_publisher.cpp  replanner.cpp  safety_zone.cpp
grasp_execution/src/moveit2/: default_executor.cpp  moveit_cpp_if.cpp
grasp_execution/test/: test_scheduler.cpp
grasp_planner/: .cpp.cfg  CMakeLists.txt  README.md  package.xml
grasp_planner/config/: attributes.yaml  finger_attributes.yaml  suction_attributes.yaml
grasp_planner/include/: ee_config.hpp  grasps.hpp  msg.hpp  perception_functions.hpp  planning_functions.hpp  planning_node.hpp
grasp_planner/launch/: grasp_planner.launch
grasp_planner/lcov/: index-sort-f.html  index-sort-l.html  index.html  total_coverage.info
grasp_planner/lcov/include/: ee_config.hpp.func-sort-c.html  ee_config.hpp.func.html  ee_config.hpp.gcov.html  grasps.hpp.func-sort-c.html  grasps.hpp.func.html  grasps.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  msg.hpp.func-sort-c.html  msg.hpp.func.html  msg.hpp.gcov.html  perception_functions.hpp.func-sort-c.html  perception_functions.hpp.func.html  perception_functions.hpp.gcov.html  planning_functions.hpp.func-sort-c.html  planning_functions.hpp.func.html  planning_functions.hpp.gcov.html  planning_node.hpp.func-sort-c.html  planning_node.hpp.func.html  (+1 more)
grasp_planner/src/: grasp_planning.cpp  perception_saver.cpp
grasp_planner/test/: ee_config_test.cpp  grasp_test.cpp  init_tests.cpp  load_perception.hpp  msg_test.cpp  perception_function_test.cpp  perception_save.hpp  planning_function_test.cpp
grasp_validator/: package.xml  setup.cfg  setup.py
grasp_validator/grasp_validator/: depth_checker.py  grasp_validator.py
grasp_validator/results/: grasps.txt  object_coordinates.txt
workcell_builder/workcell_builder/: CMakeLists.txt  package.xml
(+739 files in other folders)
